[project]
name = "sd-scripts-docker"
version = "0.0.0"
requires-python = "==3.10.*"

# Originally copied from kohya-ss/sd-scripts
# https://github.com/kohya-ss/sd-scripts/blob/a1b48df430a3690aeb5c9b6e7b19025afe8fb518/requirements.txt
dependencies = [
  "accelerate==1.6.0",
  "transformers==4.54.1",
  "diffusers[torch]==0.32.1",
  "ftfy==6.3.1",
  "opencv-python==4.10.0.84",
  "einops==0.7.0",
  "bitsandbytes",
  "lion-pytorch==0.2.3",
  "schedulefree==1.4",
  "pytorch-optimizer==3.10.0",
  "prodigy-plus-schedule-free==1.9.2",
  "prodigyopt==1.1.2",
  "tensorboard",
  "safetensors==0.4.5",
  "toml==0.10.2",
  "voluptuous==0.15.2",
  "huggingface-hub==0.34.3",
  # for Image utils
  "imagesize==1.4.1",
  "numpy",
  # for BLIP captioning
  "requests==2.32.4",
  "timm==0.6.12",
  "fairscale==0.4.13",
  # for WD14 captioning (onnx)
  "onnx==1.18.0",
  "onnxruntime-gpu==1.23.2",
  # open clip for SDXL
  "open-clip-torch==2.26.1",
  # For logging
  "rich==14.1.0",
  # for T5XXL tokenizer (SD3/FLUX)
  "sentencepiece==0.2.1",
  # PyTorch
  "torch==2.8.0+cu129",
  "torchvision==0.23.0+cu129",
  "xformers==0.0.32.post2",
  # Additional bundle
  # https://github.com/KohakuBlueleaf/LyCORIS
  "lycoris-lora==3.1.1.post1",
]

[tool.uv]
package = false
exclude-newer = "P7D"

[[tool.uv.index]]
name = "pytorch-cu129"
url = "https://download.pytorch.org/whl/cu129"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu129" }
torchvision = { index = "pytorch-cu129" }
xformers = { index = "pytorch-cu129" }
